--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,7 @@
   "require": {
     "php": ">=5.3.2",
     "silex/silex": "~1.2",
-    "payum/core": "0.12.*"
+    "payum/core": "0.13.*@dev"
   },
   "suggest": {
     "payum/payum": "If you want to install all supported payments at once"
@@ -46,7 +46,7 @@
   },
   "extra": {
     "branch-alias": {
-      "dev-master": "0.12-dev"
+      "dev-master": "0.13-dev"
     }
   },
   "config": {
