--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,7 @@
   "require": {
     "php": ">=5.3.2",
     "silex/silex": "~1.2",
-    "payum/core": "0.14.*@dev"
+    "payum/core": "0.14.*"
   },
   "suggest": {
     "payum/payum": "If you want to install all supported payments at once"
