--- a/composer.json
+++ b/composer.json
@@ -1,22 +1,8 @@
 {
   "name": "payum/payum-silex-provider",
   "type": "library",
-  "description": "Rich payment solutions for Silex framework. Paypal, Payex, Authorize.Net, Be2bill, Omnipay, Recurring paymens, IPN and many more",
-  "keywords": [
-    "payment",
-    "paypal",
-    "paypal express checkout",
-    "paypal pro checkout",
-    "be2bill",
-    "authorize.net",
-    "klarna",
-    "stripe",
-    "payex",
-    "omnipay",
-    "recurring payment",
-    "offline",
-    "instant notification"
-  ],
+  "description": "Payum offers everything you need to work with payments. From simplest use cases to very advanced ones.",
+  "keywords": ["payment", "silex"],
   "homepage": "http://payum.forma-dev.com",
   "license": "MIT",
   "authors": [
@@ -34,12 +20,12 @@
     }
   ],
   "require": {
-    "php": ">=5.3.2",
+    "php": ">=5.5.2",
     "silex/silex": "~1.2",
     "payum/core": "0.15.*@dev"
   },
   "suggest": {
-    "payum/payum": "If you want to install all supported payments at once"
+    "payum/payum": "If you want to install all supported gateways at once"
   },
   "autoload": {
     "psr-0": { "Payum\\Silex": "src/" }
