Allwo silex 2.0. Require payum/core 1.3 or higher

--- a/composer.json
+++ b/composer.json
@@ -21,9 +21,9 @@
   ],
   "require": {
     "php": ">=5.5.2",
-    "silex/silex": "^1.2",
+    "silex/silex": "^1.2|^2",
     "symfony/form": "^3",
-    "payum/core": "^1.2"
+    "payum/core": "^1.3"
   },
   "suggest": {
     "payum/payum": "If you want to install all supported gateways at once"
