--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
   "require": {
     "php": ">=5.5.2",
     "silex/silex": "^1.2",
-    "symfony/form": "^3",
+    "symfony/form": "^2.8|^3",
     "payum/core": "^1.2"
   },
   "suggest": {
